fix overflow for iphone in profile

--- a/app/css/pages/profile/profile-page.scss
+++ b/app/css/pages/profile/profile-page.scss
@@ -8,6 +8,7 @@
 
     @include mobile {
       display: block;
+      overflow: hidden;
     }
   }
 
